src/objects/CRM_Customer_Perceived_Value__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CPVs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Competition_CPV_Trend__c</fullName>
        <label>Competition CPV Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Down</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competition_CPV__c</fullName>
        <label>Competition CPV</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Nokia_CPV_Trend__c</fullName>
        <label>Nokia CPV Trend</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up</fullName>
                </value>
                <value>
                    <fullName>Dowm</fullName>
                </value>
                <value>
                    <fullName>No Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nokia_CPV__c</fullName>
        <label>Nokia CPV</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Report_Published_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top_down_support_for_CT_actions__c</fullName>
        <defaultValue>&quot;https://nokia.sharepoint.com/sites/quality_improvements_comms/SitePages/Home.aspx&quot;</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Top-down communications support for CT action Plans</inlineHelpText>
        <label>Top down support for CT actions</label>
        <type>Url</type>
    </fields>
    <label>Customer Perceived Value</label>
    <nameField>
        <displayFormat>CPV-{0000000}</displayFormat>
        <label>CPV Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Perceived Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>